# Rastery

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  imgui.ini
Sources/: CMakeLists.txt
Sources/Core/: AABB.h  App.cpp  App.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Color.cpp  Color.h  Enum.h  Error.cpp  Error.h  Macros.h  Math.cpp  Math.h  Rastery.cpp  Window.cpp  Window.h
Sources/Core/API/: BVH.cpp  BVH.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vao.cpp  Vao.h
Sources/Core/Raster/: RasterPipeline.cpp  RasterPipeline.h
Sources/Utils/: Algorithms.h  Gui.h  Image.cpp  Image.h  Logger.cpp  Logger.h  Timer.cpp  Timer.h
